--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     
-  <h1>Startup junkie and data enthusiast</h1>
+  <h1>Startup junkie with an enthusiasm for data, food, and coffee</h1>
   <img class="one" src="/_images/n-mac_hiking.jpg"
 
   </body>
