--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@ title: N-Mac
 <body>
     
   <h1>Startup junkie with an enthusiasm for data, food, and coffee</h1>
-  <img class="one" src="/_images/n-mac_hiking.jpg"
-
+  <a href="https://n-mac.github.io/about">About</a>
   </body>
 
 </html>
