--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@ title: N-Mac
   <meta charset = "utf-8">
   <title>N-Mac</title>
   <a href="https://n-mac.github.io/about">About</a>
+  <a href="https://n-mac.github.io/work">Work</a>
+  <a href="https://n-mac.github.io/blog">View All Posts</a>
 </head>
 <body>
     
