--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ title: N-Mac
 <head>
   <meta charset = "utf-8">
   <title>N-Mac</title>
-  <a href="https://n-mac.github.io/about">[About]</a>
-  <br><a href="https://n-mac.github.io/work">[Work]</a>
-  <br><a href="https://n-mac.github.io/blog">[View All Posts]</a>
+  <a href="https://n-mac.github.io/about">[About]</a>     
+  <a href="https://n-mac.github.io/work">[Work]</a>     
+  <a href="https://n-mac.github.io/blog">[View All Posts]</a>
 </head>
 <body>
     
