--- a/index.html
+++ b/index.html
@@ -3,18 +3,37 @@ layout: default
 title: N-Mac
 ---
 
-<!DOCTYPE html>
-<html lang="en-ca">
-<head>
-  <meta charset = "utf-8">
-  <title>N-Mac</title>
-  <a href="https://n-mac.github.io/about">[About]</a>     
-  <a href="https://n-mac.github.io/work">[Work]</a>     
-  <a href="https://n-mac.github.io/blog">[View All Posts]</a>
-</head>
-<body>
-    
-  <h1>Startup junkie with an enthusiasm for data, food, and coffee</h1>
-  </body>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>N-Mac</title>
 
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>N-Mac</h1>
+        <p>Startup junkie with an enthusiasm for data, food, and coffee</p>
+        <p class="view"><a href="http://github.com/n-mac">View the Project on GitHub <small>orderedlist/minimal</small></a></p>
+        <ul>
+            <li><a href="https://n-mac.github.io/about">[About]</a></li>     
+            <li><a href="https://n-mac.github.io/work">[Work]</a></li>     
+            <li><a href="https://n-mac.github.io/blog">[View All Posts]</a></li>
+        </ul>
+      </header>
+      
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+  </body>
 </html>
