--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@ title: N-Mac
   <body>
     <div class="wrapper">
       <header>
-        <h1>N-Mac</h1>
-        <p>Startup junkie with an enthusiasm for data, food, and coffee</p>
-        <p class="view"><a href="http://github.com/n-mac">View the Project on GitHub <small>orderedlist/minimal</small></a></p>
+        <h1>Startup junkie with an enthusiasm for data, food, and coffee</h1>
         <ul>
             <li><a href="https://n-mac.github.io/about">[About]</a></li>     
             <li><a href="https://n-mac.github.io/work">[Work]</a></li>     
